...
                interactionSource = remember { MutableInteractionSource() },
                indication = null,
                onClickLabel = stringResource(R.string.dismiss_source_menu),
                role = Role.Button,
                onClick = onDismiss,
            )
            .testTag("sourceMenuScrim"),
    ) {
        Card(
            modifier = Modifier
                .align(Alignment.BottomStart)
                .windowInsetsPadding(WindowInsets.safeContent.only(WindowInsetsSides.Horizontal + WindowInsetsSides.Bottom))
                .padding(16.dp)
...
